Fixed z-index for long-days-box in the week view component

--- a/src/app/shared/components/sheduler/views/sheduler-week-view/sheduler-week-view.component.scss
+++ b/src/app/shared/components/sheduler/views/sheduler-week-view/sheduler-week-view.component.scss
@@ -42,7 +42,7 @@
 }
 
 .long-days-box {
-  z-index: 10000;
+  z-index: 1000;
   top: $header-row-height;
   left: 0;
   position: absolute;
